--- a/index.html
+++ b/index.html
@@ -6,29 +6,18 @@
 
 <body>
 
-<h1>Mathias' Webpage</h1>
+<h1><center>UPTOWN HARDWOOD</h1>
 
 <div id="contact">
-<h2>Contact info</h2>
-<ul>
-  <li><strong>Phone:</strong> 612-111-2222</li>
-  <li><strong>E-mail:</strong> ande8835@umn.edu</li>
-  <li><strong>Website:</strong> http://www.example.org</li>
-</ul>
-</div>
-
-<h2>Introduction</h2>
-
-<p>Hello, my name is Mathias Anderson and I am pursuing the Graduate Certificate in Technical Communication in hopes of furthering my career and expanding my knowledge base. </p>
+<h2><center>ABOUT</h2>
+<p><center>Uptown Hardwood, an owner-operated flooring business, prides itself on quality craftsmanship and building customer relationships. We believe in treating every jobsite as if its one of our own homes and treating every customer like they are our own family. We let our products speak for themselves, since its inception, Uptown Hardwood, has relied 100% on customer referrals for all of its business.</p>
 
 
-<h2>Interests</h2>
+<h3><center>Contact Info</h3>
 
-<p>Pursuing new opportunities and experiences to make life more interesting </p>
+<p><center>Jeremy@uptownhardwood.com </p>
+  <p><center>763-458-0367</p>
 
-<h2>What I like to do with my free time:</h2>
-
-<p>Run, travel, read, explore, hang out with friends.</p>
 
 </body>
 </html>
