--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<head>
+<html>
   <title>Page title</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+<head><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
+
 <body>
+  <h1><center><img src="homeTop3.jpg" alt="Uptown Hardwood" style="width:304px;height:228px;">
 
-<h1><center>UPTOWN HARDWOOD</h1>
+  </body>
 
+  <div class="tab">
+    <button class="tablinks" onclick="openCity(event, 'Prices')">PRICES</button>
+    <button class="tablinks" onclick="openCity(event, 'Paris')">CUSTOM WORK</button>
+
+  </div>
 <div id="contact">
 <h2><center>ABOUT</h2>
 <p><center>Uptown Hardwood, an owner-operated flooring business, prides itself on quality craftsmanship and building customer relationships. We believe in treating every jobsite as if its one of our own homes and treating every customer like they are our own family. We let our products speak for themselves, since its inception, Uptown Hardwood, has relied 100% on customer referrals for all of its business.</p>
