--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
+
   <title>Page title</title>
-<head><link rel="stylesheet" type="text/css" href="styles.css">
+<head><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 
 <body>
   <h1><center><img src="homeTop3.jpg" alt="Uptown Hardwood" style="width:304px;height:228px;">
+    
 
   </body>
 
