--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
 <!doctype html>
-<html>
-
-  <title>Page title</title>
-<head><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="styles.css">
+<html "lang=eng">
+<head>
+<meta charset="utf-8">
+<meta name="description" content="A page for hardwood installation">
+<link rel="stylesheet" type="text/css" href="styles.css">
+<title>Uptown Hardwood</title>
 </head>
-
-
 <body>
-  <h1><center><img src="homeTop3.jpg" alt="Uptown Hardwood" style="width:304px;height:228px;">
-    
-
-  </body>
-
-  <div class="tab">
-    <button class="tablinks" onclick="openCity(event, 'Prices')">PRICES</button>
-    <button class="tablinks" onclick="openCity(event, 'Paris')">CUSTOM WORK</button>
-
-  </div>
-<div id="contact">
-<h2><center>ABOUT</h2>
-<p><center>Uptown Hardwood, an owner-operated flooring business, prides itself on quality craftsmanship and building customer relationships. We believe in treating every jobsite as if its one of our own homes and treating every customer like they are our own family. We let our products speak for themselves, since its inception, Uptown Hardwood, has relied 100% on customer referrals for all of its business.</p>
 
 
-<h3><center>Contact Info</h3>
+<h1 style="font-size:500%;"><center>Uptown Hardwood</h1>
+<center><img src="homeTop3.jpg" alt="Uptown Hardwood" style="width:604px;height:428px;">
 
-<p><center>Jeremy@uptownhardwood.com </p>
-  <p><center>763-458-0367</p>
+
+<p align="center"><span class="style1">&copy;2007 Uptown Hardwood - Hardwood floor installation, refinishing and custom inlays - 763.458.0367</span></p>
+
+
+<p align="center" class="style1"><a href="install.html" target="_parent">New Installation</a> // <a href="refinish.html" target="_parent">Refinishing</a> // <a href="stair.html" target="_parent">Stair Installation</a> // <a href="custom.html" target="_parent">Custom Work</a> // <a href="contact.html" target="_parent">Contact Us </a></p>
 
 
 </body>
