--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
-<html "lang=eng">
-<head>
-<meta charset="utf-8">
-<meta name="description" content="A page for hardwood installation">
-<link rel="stylesheet" type="text/css" href="styles.css">
-<title>Uptown Hardwood</title>
+<html>
+
+  <title>Page title</title>
+<head><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
 
-
 <h1 style="font-size:500%;"><center>Uptown Hardwood</h1>
-<center><img src="homeTop3.jpg" alt="Uptown Hardwood" style="width:604px;height:428px;">
+<center><img src="homeTop3.jpg" alt="Uptown Hardwood" style="width:604px;height:300px;">
 
 
 <p align="center"><span class="style1">&copy;2007 Uptown Hardwood - Hardwood floor installation, refinishing and custom inlays - 763.458.0367</span></p>
