--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-  <title>Page title</title>
+  <title>Uptown Hardwood</title>
 <head><meta charset="utf-8"><link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
